--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.86.1",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "framer-motion": "^12.9.1",
     "next": "latest",
     "next-sanity": "^9.10.2",
     "react": "latest",
