--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-sanity": "^9.10.2",
     "react": "latest",
     "react-dom": "latest",
+    "resend": "^4.4.1",
     "sanity": "^3.86.1",
     "styled-components": "^6.1.17"
   },
