feat: update contact form API to send notification email automatically

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.9.1",
     "next": "latest",
     "next-sanity": "^9.10.2",
+    "nodemailer": "^6.10.1",
     "react": "latest",
     "react-dom": "latest",
     "resend": "^4.4.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "latest",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.21",
