--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.86.1",
+    "@sanity/vision": "^3.87.1",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -21,8 +21,9 @@
     "nodemailer": "^6.10.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^5.5.0",
     "resend": "^4.4.1",
-    "sanity": "^3.86.1",
+    "sanity": "^3.87.1",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
