--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ NEXT_PUBLIC_CONTACT_PHONE="+1234567890"
 # API keys (if needed)
 # NEXT_PUBLIC_MAPS_API_KEY=""
 # NEXT_PUBLIC_FORM_SUBMISSION_KEY="" 
+NEXT_PUBLIC_SITE_URL=https://yourdomain.com
