--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@heroicons/react": "^2.1.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.87.1",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "dompurify": "^3.2.5",
     "framer-motion": "^12.9.1",
     "next": "latest",
     "next-sanity": "^9.10.2",
@@ -24,7 +26,8 @@
     "react-icons": "^5.5.0",
     "resend": "^4.4.1",
     "sanity": "^3.87.1",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
