Add critters package for CSS optimization

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "critters": "^0.0.23",
     "dompurify": "^3.2.5",
     "framer-motion": "^12.9.1",
     "next": "latest",
