--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "init-sanity": "npx tsx sanity/lib/initSanity.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
