--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^7.2.2",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,4 +31,4 @@
     "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   }
-} 
+}
