--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,7 +15,6 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/client": "^7.2.2",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,9 +23,11 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@sanity/client": "^7.3.0",
     "@sanity/eslint-config-studio": "^3.0.0",
     "@types/react": "^18.0.25",
     "@types/styled-components": "^5.1.26",
+    "dotenv": "^16.5.0",
     "eslint": "^8.6.0",
     "prettier": "^3.0.2",
     "typescript": "^5.1.6"
