--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@sanity/client": "^7.8.2",
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "latest",
     "@types/nodemailer": "^6.4.17",
