--- a/.env.local.new
+++ b/.env.local.new
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_SANITY_PROJECT_ID="6890038t"
 NEXT_PUBLIC_SANITY_DATASET="production"
 NEXT_PUBLIC_SANITY_API_VERSION="2025-04-24"
+RESEND_API_KEY="re_X7YxZ83u_4SUrPxqjABgYdecvZ9rjp8ss"
