added GTM container and removed old one

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NEXT_PUBLIC_CONTACT_PHONE="+1234567890"
 
 # Analytics (if needed)
 # NEXT_PUBLIC_GA_ID=""
-# NEXT_PUBLIC_GTM_ID=""
+NEXT_PUBLIC_GTM_ID="GTM-5R36QZGM"
 
 # API keys (if needed)
 # NEXT_PUBLIC_MAPS_API_KEY=""
